<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-16dp">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="LOGIN"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="68dp">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="322dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_usuario"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/txtContrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:ems="10"
            android:hint="@string/hint_contrasenia"
            android:inputType="textPassword"
            android:paddingTop="20sp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtOlvido"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/lbl_olvido"
            android:textAlignment="center"
            android:textColor="#1131E4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnIngresar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_weight="1"
                android:text="@string/btn_aceptar" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_weight="1"
                android:text="@string/btn_cancelar" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnNuevoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="abrirfrmNuevoUsuario"
            android:text="@string/btn_nuevo_usuario" />
    </LinearLayout>

</LinearLayout>